--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
   </head>
 
   <body>
-    <div class="intro">
+    <!-- <div class="intro">
       <h2>MasterLock</h2>
       <h3>Try to find the pattern to unlock.</h3>
       <img src="lock.svg" alt="" width="100px">
     </div>
     <div class="game">
-    </div>
+    </div> -->
 
 
     <script src="scripts/pattern.js"></script>
-    <script>
-      var xx = new Pattern(4);
-      xx.fillRandomly()
-      document.body.appendChild(xx.generateSVG())
-    </script>
+    <script src="scripts/lock.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
