Implement the animation on dot magnet

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div> -->
 
 
+    <script src="scripts/patternSVG.js"></script>
     <script src="scripts/pattern.js"></script>
     <script src="scripts/lock.js"></script>
     <script src="scripts/app.js"></script>
