--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </div> -->
 
 
-    <script src="scripts/patternSVG.js"></script>
-    <script src="scripts/pattern.js"></script>
-    <script src="scripts/lock.js"></script>
+    <script src="scripts/utils/patternSVG.js"></script>
+    <script src="scripts/models/pattern.js"></script>
+    <script src="scripts/controllers/lock.ctrl.js"></script>
     <script src="scripts/app.js"></script>
   </body>
 </html>
