--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="scripts/utils/patternSVG.js"></script>
     <script src="scripts/models/pattern.js"></script>
     <script src="scripts/controllers/lock.ctrl.js"></script>
+    <script src="scripts/controllers/history.ctrl.js"></script>
     <script src="scripts/app.js"></script>
   </body>
 </html>
