Add a reset mode (MVP GUUUUUURLL!)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="game">
     </div> -->
 
+<button onclick="resset()">reset</button>
 
     <script src="scripts/utils/patternSVG.js"></script>
     <script src="scripts/models/pattern.js"></script>
