--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="game">
     </div> -->
 
-<button onclick="resset()">reset</button>
-
     <script src="scripts/utils/patternSVG.js"></script>
     <script src="scripts/models/pattern.js"></script>
+    <script src="scripts/controllers/game.ctrl.js"></script>
     <script src="scripts/controllers/lock.ctrl.js"></script>
     <script src="scripts/controllers/history.ctrl.js"></script>
+    <script src="scripts/controllers/statusBar.ctrl.js"></script>
     <script src="scripts/app.js"></script>
   </body>
 </html>
