Add the selector component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="scripts/models/pattern.js"></script>
     <script src="scripts/controllers/game.ctrl.js"></script>
     <script src="scripts/controllers/option.ctrl.js"></script>
+    <script src="scripts/controllers/selector.ctrl.js"></script>
     <script src="scripts/controllers/lock.ctrl.js"></script>
     <script src="scripts/controllers/history.ctrl.js"></script>
     <script src="scripts/controllers/statusBar.ctrl.js"></script>
