--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>MasterLock</title>
     <link rel="shortcut icon" href="assets/favicon.png">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
-    <meta name="theme-color" content="#21252B">
+    <meta name="theme-color" content="#14171b">
 
     <link rel="stylesheet" href="style.css">
   </head>
@@ -21,6 +21,7 @@
     <script src="scripts/utils/patternSVG.js"></script>
     <script src="scripts/models/pattern.js"></script>
     <script src="scripts/controllers/game.ctrl.js"></script>
+    <script src="scripts/controllers/menu.ctrl.js"></script>
     <script src="scripts/controllers/option.ctrl.js"></script>
     <script src="scripts/controllers/selector.ctrl.js"></script>
     <script src="scripts/controllers/lock.ctrl.js"></script>
