Add countdown controller with implementation

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="scripts/models/pattern.js"></script>
     <script src="scripts/controllers/game.ctrl.js"></script>
     <script src="scripts/controllers/menu.ctrl.js"></script>
+    <script src="scripts/controllers/countdown.ctrl.js"></script>
     <script src="scripts/controllers/option.ctrl.js"></script>
     <script src="scripts/controllers/selector.ctrl.js"></script>
     <script src="scripts/controllers/lock.ctrl.js"></script>
