--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="game">
     </div> -->
 
+    <script src="scripts/config.js"></script>
     <script src="scripts/utils/patternSVG.js"></script>
     <script src="scripts/models/pattern.js"></script>
     <script src="scripts/controllers/game.ctrl.js"></script>
