Add webpack sass config

--- a/index.html
+++ b/index.html
@@ -23,26 +23,8 @@
   </head>
 
   <body>
-    <!-- <div class="intro">
-      <h2>MasterLock</h2>
-      <h3>Try to find the pattern to unlock.</h3>
-      <img src="lock.svg" alt="" width="100px">
-    </div>
-    <div class="game">
-    </div> -->
 
-    <script src="scripts/config.js"></script>
-    <script src="scripts/utils/patternSVG.js"></script>
-    <script src="scripts/models/pattern.js"></script>
-    <script src="scripts/controllers/game.ctrl.js"></script>
-    <script src="scripts/controllers/menu.ctrl.js"></script>
-    <script src="scripts/controllers/countdown.ctrl.js"></script>
-    <script src="scripts/controllers/option.ctrl.js"></script>
-    <script src="scripts/controllers/selector.ctrl.js"></script>
-    <script src="scripts/controllers/lock.ctrl.js"></script>
-    <script src="scripts/controllers/history.ctrl.js"></script>
-    <script src="scripts/controllers/statusBar.ctrl.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="app.js"></script>
     <script src="scripts/pwa/setup.js"></script>
   </body>
 </html>
