--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>MasterLock</title>
+    <title>BreakLock</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
 
@@ -13,18 +13,17 @@
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="MasterLock">
+    <meta name="apple-mobile-web-app-title" content="BreakLock">
     <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
 
     <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#14171b">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="app.css">
   </head>
 
   <body>
-
     <script src="app.js"></script>
-    <script src="scripts/pwa/setup.js"></script>
+    <!-- <script src="scripts/pwa/setup.js"></script> -->
   </body>
 </html>
