--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
   <body>
 
+    <div id="instructions-template">
+      <p>Link the dots to find the pattern lock hidden. After every attempts the game will provide you indications. A plain circle is for correct dot in right order in the pattern. An empty bordered one is for correct dot in the wrong order. Good luck!'</p>
+    </div>
+
     <!-- SVG Icon definitions -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <symbol viewBox="0 0 128 128" id="icon-tryagain">
