--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
     <!-- SVG Icon definitions -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-      <symbol viewBox="0 0 128 128" id="icon-tryagain">
+      <symbol viewBox="0 0 128 128" id="icon-try_again">
         <path d="M111.5,120.5h-96c-4.418,0-8-3.582-8-8V16c0-3.236,1.949-6.153,4.938-7.391c2.991-1.237,6.432-0.554,8.718,1.734l48.5,48.5 c2.288,2.288,2.972,5.729,1.733,8.719S67.235,72.5,64,72.5H23.5v32h80v-80h-40c-4.418,0-8-3.582-8-8s3.582-8,8-8h48 c4.418,0,8,3.582,8,8v96C119.5,116.918,115.918,120.5,111.5,120.5z M23.5,56.5h21.187L23.5,35.313V56.5z"/>
       </symbol>
-      <symbol viewBox="0 0 128 128" id="icon-home">
+      <symbol viewBox="0 0 128 128" id="icon-back_home">
         <path d="M111.5,120.5h-96c-4.418,0-8-3.582-8-8V64c0-2.129,0.849-4.17,2.358-5.672l48.25-48C59.613,8.831,61.681,8.015,63.776,8 c2.123,0.007,4.157,0.858,5.652,2.365l47.875,48.25c1.907,1.922,2.639,4.569,2.196,7.047V112.5 C119.5,116.918,115.918,120.5,111.5,120.5z M23.5,104.5h80v-32h-40c-4.418,0-8-3.582-8-8s3.582-8,8-8h29.165L63.713,27.321 L23.5,67.326V104.5z"/>
       </symbol>
       <symbol viewBox="0 0 128 128" id="icon-continue">
