Improve menu screen

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
   <body>
 
     <div id="instructions-template">
-      <p>Link the dots to find the pattern lock hidden. After every attempts the game will provide you indications. A plain circle is for correct dot in right order in the pattern. An empty bordered one is for correct dot in the wrong order. Good luck!'</p>
+      <p>Link the dots to find the pattern lock hidden. After every attempts the game will provide you indications.<p>
+      <p>&#9679; : correct dot in right order in the pattern</p>
+      <p>&#9675; : correct dot in the wrong order</p>
+      <p>The difficulty change the amount of dots to connect. Easy is 4 dots, medium is 5 dots and hard is 6 dots.</p>
+      <p>Good luck!_</p>
     </div>
 
     <!-- SVG Icon definitions -->
