Make the summary layout fade

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="shortcut icon" href="assets/favicon.png">
     <meta name="theme-color" content="#14171b">
 
-    <!-- <link rel="manifest" href="/manifest.json"> -->
+    <link rel="manifest" href="/manifest.json">
 
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="BreakLock">
-    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" href="assets/icons/icon-152x152.png">
 
-    <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+    <meta name="msapplication-TileImage" content="assets/icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#14171b">
 
     <link rel="stylesheet" href="app.css">
@@ -24,12 +24,15 @@
 
   <body>
 
-    <div id="instructions-template">
-      <p>Link the dots to find the pattern lock hidden. After every attempts the game will provide you indications.<p>
-      <p>&#9679; : correct dot in right order in the pattern</p>
-      <p>&#9675; : correct dot in the wrong order</p>
-      <p>The difficulty change the amount of dots to connect. Easy is 4 dots, medium is 5 dots and hard is 6 dots.</p>
-      <p>Good luck!_</p>
+    <div style="display: none;">
+      <div id="instructions-template">
+        <p>Link the dots to find the pattern lock hidden. After every attempts the game will provide you indications.<p>
+        <p>&#9679; : correct dot in right order in the pattern</p>
+        <p>&#9675; : correct dot in the wrong order</p>
+        <p>The difficulty change the amount of dots to connect. Easy is 4 dots, medium is 5 dots and hard is 6 dots.</p>
+        <p>Good luck!_</p>
+        <p class="small">by <a href="https://twitter.com/mxwllt"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-maxwellito"></use></svg></a> / on <a href="https://github.com/maxwellito/breaklock"><a href="https://twitter.com/mxwllt"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-github"></use></svg></a></p>
+      </div>
     </div>
 
     <!-- SVG Icon definitions -->
@@ -63,7 +66,7 @@
         alert(b + ' ' + c)
       }
     </script>
-    <script src="app.js?ddd=22"></script>
+    <script src="app.js?ddd=2wsdsds2"></script>
     <!-- <script src="scripts/pwa/setup.js"></script> -->
 
 
