Desperate message in case of chaos

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
       </symbol>
     </svg>
 
+    <!--[if lte IE 6]>
+      <p>
+        If you read this it's probably because the world has rebooted and I don't know how but you arrived here. Im sorry you cannot enjoy this little game but you will be able to in a relative future. Browsers will get better and will respect W3C standards. Just before the world turn into chaos due to Nutella production stop. Scientists will realise too late that Nutella was to humans what the pollen is to bees. Don't believe the hype, the end didn't (or won't) happen because the 'left-pad' package on NPM. Good luck.
+      </p>
+      <p>
+        PS: Say to thejameskyle that I loved him. Only his cat can save the world.
+      </p>
+    <![endif]-->
+
     <script>
       window.onerror = function(e, a, b, c) {
         alert(e)
