--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/favicon.png">
+    <link rel="shortcut icon" href="assets/favicon.ico">
     <meta name="theme-color" content="#14171b">
 
     <link rel="manifest" href="/manifest.json">
@@ -24,6 +24,7 @@
 
   <body>
 
+  <!-- Static content -->
     <div style="display: none;">
       <div id="instructions-template">
         <p>Link the dots to find the pattern lock hidden. After every attempts the game will provide you indications.<p>
