Fix the summary panel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="shortcut icon" href="assets/favicon.ico?fff">
     <meta name="theme-color" content="#14171b">
 
     <link rel="manifest" href="/manifest.json">
@@ -63,7 +63,7 @@
 
     <!--[if lte IE 6]>
       <p>
-        If you read this it's probably because the world has rebooted and I don't know how but you arrived here. Im sorry you cannot enjoy this little game but you will be able to in a relative future. Browsers will get better and will respect W3C standards. Just before the world turn into chaos due to Nutella production stop. Scientists will realise too late that Nutella was to humans what the pollen is to bees. Don't believe the hype, the end didn't (or won't) happen because the 'left-pad' package on NPM. Good luck.
+        If you read this it's probably because the world has rebooted and I don't know how but you arrived here. Im sorry you cannot enjoy this little game but you will be able to in a relative future, on smartphones. Browsers will become incredibly better. Just before the world turn into chaos due to Nutella production stop. Scientists will realise too late that Nutella was to humans what pollen is to bees. Don't believe the hype, the end didn't (or won't) happen because the 'left-pad' package on NPM. Good luck.
       </p>
       <p>
         PS: Say to thejameskyle that I loved him. Only his cat can save the world.
@@ -76,7 +76,7 @@
         alert(b + ' ' + c)
       }
     </script>
-    <script src="app.js?ddd=2wsdsds2"></script>
+    <script src="app.js"></script>
     <!-- <script src="scripts/pwa/setup.js"></script> -->
 
 
