Improve intro demo integration

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/favicon.ico?fff">
+    <link rel="shortcut icon" href="assets/favicon.ico?fffdd">
     <meta name="theme-color" content="#14171b">
 
     <link rel="manifest" href="/manifest.json">
@@ -27,6 +27,7 @@
   <!-- Static content -->
     <div style="display: none;">
       <div id="instructions-template">
+        <object class="introduction-demo" data="assets/intro.svg" type="image/svg+xml"></object>
         <p>Link the dots to find the pattern lock hidden. After every attempts the game will provide you indications.<p>
         <p>&#9679; : correct dot in right order in the pattern</p>
         <p>&#9675; : correct dot in the wrong order</p>
