--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- SVG Icon definitions -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-      <symbol viewBox="0 0 128 128" id="icon-try_again">
+      <symbol viewBox="0 0 128 128" id="icon-new_game">
         <path d="M111.5,120.5h-96c-4.418,0-8-3.582-8-8V16c0-3.236,1.949-6.153,4.938-7.391c2.991-1.237,6.432-0.554,8.718,1.734l48.5,48.5 c2.288,2.288,2.972,5.729,1.733,8.719S67.235,72.5,64,72.5H23.5v32h80v-80h-40c-4.418,0-8-3.582-8-8s3.582-8,8-8h48 c4.418,0,8,3.582,8,8v96C119.5,116.918,115.918,120.5,111.5,120.5z M23.5,56.5h21.187L23.5,35.313V56.5z"/>
       </symbol>
       <symbol viewBox="0 0 128 128" id="icon-back_home">
