--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <meta name="msapplication-TileImage" content="assets/icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#14171b">
-
-    <link rel="stylesheet" href="app.css">
   </head>
 
   <body>
+
+    <div id="container"></div>
 
   <!-- Static content -->
     <div style="display: none;">
