--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
   </head>
 
   <body>
-
-
-  <!-- Static content -->
+    <!-- Static content -->
     <div style="display: none;">
       <div id="instructions-template">
         <object class="introduction-demo" data="assets/intro.svg" type="image/svg+xml"></object>
@@ -92,13 +90,20 @@
 
     <script src="app.js"></script>
     <script type="text/javascript">
-      // if ('serviceWorker' in navigator) {
-      //   navigator.serviceWorker
-      //     .register('service-worker.js', {scope: '.'})
-      //     .then(function() { console.log('Service Worker Registered'); });
-      // }
+
+      // Set up service worker
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('service-worker.js', {scope: '.'});
+      }
+
+      // Set up Google Analytics
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-96752793-1', 'auto');
+      ga('send', 'pageview');
     </script>
-
-
   </body>
 </html>
