--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
   </head>
 
   <body>
+    <!-- Intro -->
+    <p id="app-intro" style="font-family: monospace; color: #fff;">
+      $ ./breaklock start<br>
+      Loading...
+      <style type="text/css">
+        body {
+          background: #14171b;
+        }
+      </style>
+    </p>
+
     <!-- Static content -->
     <div style="display: none;">
       <div id="instructions-template">
