--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html>
   <head>
-    <title>BreakLock</title>
+    <title>#@name_app</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="shortcut icon" href="../assets/favicon.ico">
     <meta name="theme-color" content="#14171b">
 
     <link rel="manifest" href="manifest.json">
 
     <!-- Add to home screen for Safari on iOS -->
-    <link rel="apple-touch-icon" href="assets/icons/ios-180x180.png">
-    <link rel="apple-touch-startup-image" href="assets/ios-startup/startup-640x1136.png" media="device-width: 375px">
-    <link rel="apple-touch-startup-image" href="assets/ios-startup/startup-1080x1920.png" media="device-width: 414px">
-    <link rel="apple-touch-startup-image" href="assets/ios-startup/startup-640x1136.png" media="(device-width: 320px) and (device-height: 568px)">
-    <link rel="apple-touch-startup-image" href="assets/ios-startup/startup-640x960.png"  media="(device-width: 320px) and (device-height: 480px)">
+    <link rel="apple-touch-icon" href="../assets/icons/ios-180x180.png">
+    <link rel="apple-touch-startup-image" href="../assets/ios-startup/startup-640x1136.png" media="device-width: 375px">
+    <link rel="apple-touch-startup-image" href="../assets/ios-startup/startup-1080x1920.png" media="device-width: 414px">
+    <link rel="apple-touch-startup-image" href="../assets/ios-startup/startup-640x1136.png" media="(device-width: 320px) and (device-height: 568px)">
+    <link rel="apple-touch-startup-image" href="../assets/ios-startup/startup-640x960.png"  media="(device-width: 320px) and (device-height: 480px)">
     
     <meta name="apple-mobile-web-app-title" content="BreakLock">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,10 +24,11 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 
-    <meta name="msapplication-TileImage" content="assets/icons/icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../assets/icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#14171b">
 
     <link rel="stylesheet" type="text/css" href="app.css">
+    #@special_css
   </head>
 
   <body>
@@ -45,21 +46,21 @@
     <!-- Static content -->
     <div style="display: none;">
       <div id="instructions-template">
-        <object class="introduction-demo" data="assets/intro.svg" type="image/svg+xml"></object>
-        <p>Link the dots to find the lock pattern. After every attempt the game will tell you how many dots you got right.<p>
+        <object class="introduction-demo" data="../assets/intro.svg" type="image/svg+xml"></object>
+        <p>#@description_game<p>
         <table>
           <tr>
             <td style="width:1.5em;">&#9679;</td>
-            <td>a dot occurs in the pattern and is in the correct order</td>
+            <td>#@description_white</td>
           </tr>
           <tr>
             <td>&#9675;</td>
-            <td>a dot occurs in the pattern but in the wrong order</td>
+            <td>#@description_black</td>
           </tr>
         </table>
-        <p>The difficulty setting changes the amount of dots to connect. Easy is 4 dots, medium is 5 dots and hard is 6 dots.</p>
-        <p>Good luck!_</p>
-        <p class="small">by <a href="https://twitter.com/mxwllt"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-maxwellito"></use></svg></a> / on <a href="https://github.com/maxwellito/breaklock"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-github"></use></svg></a></p>
+        <p>#@description_difficulty</p>
+        <p>#@label_goodluck</p>
+        <p class="small">#@attribution</p>
       </div>
     </div>
 
@@ -105,7 +106,7 @@
       // Set up service worker
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker
-          .register('service-worker.js', {scope: '.'});
+          .register('../service-worker.js');
       }
 
       // Easter Egg to get it full black
