--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="#@lang_code">
   <head>
     <title>#@name_app</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
