--- a/en/index.html
+++ b/en/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>BreakLock</title>
-    <base href="./">
+    <base href="../">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link rel="shortcut icon" href="assets/favicon.ico">
