--- a/fa/index.html
+++ b/fa/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa">
   <head>
-    <title>BreakLock</title>
-    <base href="./">
+    <title>قفل شکن</title>
+    <base href="../">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link rel="shortcut icon" href="assets/favicon.ico">
     <meta name="theme-color" content="#14171b">
 
-    <link rel="manifest" href="en/manifest.json">
+    <link rel="manifest" href="fa/manifest.json">
 
     <!-- Add to home screen for Safari on iOS -->
     <link rel="apple-touch-icon" href="assets/icons/ios-180x180.png">
@@ -28,8 +28,8 @@
     <meta name="msapplication-TileImage" content="assets/icons/icon-144x144.png">
     <meta name="msapplication-TileColor" content="#14171b">
 
-    <link rel="stylesheet" type="text/css" href="en/app.css">
-    <style></style>
+    <link rel="stylesheet" type="text/css" href="fa/app.css">
+    <style>body{direction:rtl}</style>
   </head>
 
   <body>
@@ -68,20 +68,20 @@
     <div style="display: none;">
       <div id="instructions-template">
         <object class="introduction-demo" data="assets/intro.svg" type="image/svg+xml"></object>
-        <p>Link the dots to find the lock pattern. After every attempt the game will tell you how many dots you got right.<p>
+        <p>نقطه ها رو به هم وصل کنید تا الگو رو پیدا کنید. بعد هر تلاش بازی به شما تعداد نقطه های درست رو می گه.<p>
         <table>
           <tr>
             <td style="width:1.5em;">&#9679;</td>
-            <td>a dot occurs in the pattern and is in the correct order</td>
+            <td>یه نقطه توی الگو هست و در جای درستی قرار گرفته</td>
           </tr>
           <tr>
             <td>&#9675;</td>
-            <td>a dot occurs in the pattern but in the wrong order</td>
+            <td>یه نقطه توی الگو هست ولی جاش غلطه</td>
           </tr>
         </table>
-        <p>The difficulty setting changes the amount of dots to connect. Easy is 4 dots, medium is 5 dots and hard is 6 dots.</p>
-        <p>Good luck!_</p>
-        <p class="small">by <a href="https://twitter.com/mxwllt"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-maxwellito"></use></svg></a> / on <a href="https://github.com/maxwellito/breaklock"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-github"></use></svg></a></p>
+        <p>تغییر سختی تعداد نقطه های الگو رو تغییر می ده. آسان ۴ نقطه داره، متوسط ۵ نقطه و سخت ۶ نقطه.</p>
+        <p>موفق باشید!_</p>
+        <p class="small">توسط <a href="https://twitter.com/mxwllt"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-maxwellito"></use></svg></a> / روی <a href="https://github.com/maxwellito/breaklock"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-github"></use></svg></a><br>ترجمه توسط <a href="https://hkalbasi.github.io/">حمیدرضا کلباسی</a></p>
       </div>
     </div>
     <!-- SVG Icon definitions -->
@@ -120,7 +120,7 @@
       <![endif]-->  
     </noscript>
 
-    <script src="en/app.js"></script>
+    <script src="fa/app.js"></script>
     <script type="text/javascript">
 
       // Set up service worker
