--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>BreakLock</title>
     <meta name="description" content="A hybrid of Mastermind and the Android pattern lock. A game you gonna love to hate." />
-    <base href="../" />
+    <base href="/breaklock/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <link rel="shortcut icon" href="assets/favicon.ico" />
@@ -67,7 +67,6 @@
       })();
 
       if (isRoot) {
-        document.querySelector('base').remove();
         const supported = { fa: true, en: true };
         for (const l of navigator.languages) {
           if (l === 'en') break;
