Hard code base reference

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>#@name_app</title>
     <meta name="description" content="#@description" />
-    <base href="../" />
+    <base href="/breaklock/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <link rel="shortcut icon" href="assets/favicon.ico" />
