--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="#@description" />
     <base href="/breaklock/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <link rel="shortcut icon" href="assets/favicon.ico" />
     <meta name="theme-color" content="#14171b" />
