--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       })();
 
       if (isRoot) {
-        const supported = { fa: true, en: true, zh: true, ru: true, fr: true };
+        const supported = { fa: true, en: true, zh: true, ru: true, fr: true, pt_br:true };
         for (const l of navigator.languages) {
           if (l === 'en') break;
           if (supported[l]) {
